Fix (ci): Fix syntax error for release docker push job step

--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -129,7 +129,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}          ${{ github.repository }}:latest
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+          ${{ github.repository }}:latest
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
@@ -259,7 +260,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -388,7 +390,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -517,7 +520,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -646,7 +650,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -775,7 +780,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -904,7 +910,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -1033,7 +1040,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -1162,7 +1170,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -1291,7 +1300,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -1420,7 +1430,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -1549,7 +1560,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -1678,7 +1690,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -1807,7 +1820,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -1936,7 +1950,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -2065,7 +2080,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -2194,7 +2210,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
@@ -2323,7 +2340,8 @@ jobs:
         tags: |
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG }}
           ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF }}
-          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}        cache-from: type=local,src=/tmp/.buildx-cache
+          ${{ github.repository }}:${{ steps.prep.outputs.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: List docker images
