--- a/variants/v1.18.15-alpine-3.8/Dockerfile
+++ b/variants/v1.18.15-alpine-3.8/Dockerfile
@@ -6,4 +6,4 @@ RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM"
 # When $TARGETPLATFORM is linux/arm/v7, strip out the '/v7' from it
 RUN wget -qO- https://storage.googleapis.com/kubernetes-release/release/v1.18.15/bin/$( echo $TARGETPLATFORM | sed 's@/v7$@@' )/kubectl > /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl
 
-ENTRYPOINT [ "/usr/local/bin/kubectl" ]
+CMD [ "/usr/local/bin/kubectl" ]
