--- a/variants/v1.17.17-envsubst-git-jq-kustomize-sops-ssh-alpine-3.8/Dockerfile
+++ b/variants/v1.17.17-envsubst-git-jq-kustomize-sops-ssh-alpine-3.8/Dockerfile
@@ -41,4 +41,4 @@ RUN apk add --no-cache gnupg
 
 RUN apk add --no-cache openssh-client
 
-ENTRYPOINT [ "/usr/local/bin/kubectl" ]
+CMD [ "/usr/local/bin/kubectl" ]
