Enhancement: Build linux/arm/v6 arch image for all variants

--- a/variants/v1.20.4-envsubst-git-jq-kustomize-sops-ssh-alpine-3.8/Dockerfile
+++ b/variants/v1.20.4-envsubst-git-jq-kustomize-sops-ssh-alpine-3.8/Dockerfile
@@ -3,8 +3,8 @@ ARG TARGETPLATFORM
 ARG BUILDPLATFORM
 RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM"
 
-# When $TARGETPLATFORM is linux/arm/v7, strip out the '/v7' from it
-RUN wget -qO- https://storage.googleapis.com/kubernetes-release/release/v1.20.4/bin/$( echo $TARGETPLATFORM | sed 's@/v7$@@' )/kubectl > /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl
+# When $TARGETPLATFORM is linux/arm/v7, strip out the '/v6' or '/v7' from it
+RUN wget -qO- https://storage.googleapis.com/kubernetes-release/release/v1.20.4/bin/$( echo $TARGETPLATFORM | sed 's@/v[67]$@@' )/kubectl > /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl
 
 # From: https://github.com/nginxinc/docker-nginx/blob/1.17.0/stable/alpine/Dockerfile
 # Bring in gettext so we can get `envsubst`, then throw
