--- a/variants/v1.17.17-alpine-3.8/Dockerfile
+++ b/variants/v1.17.17-alpine-3.8/Dockerfile
@@ -4,6 +4,11 @@ ARG BUILDPLATFORM
 RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM"
 
 # When $TARGETPLATFORM is linux/arm/v7, strip out the '/v6' or '/v7' from it
-RUN wget -qO- https://storage.googleapis.com/kubernetes-release/release/v1.17.17/bin/$( echo $TARGETPLATFORM | sed 's@/v[67]$@@' )/kubectl > /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl
+RUN BIN_URL=https://storage.googleapis.com/kubernetes-release/release/v1.17.17/bin/$( echo $TARGETPLATFORM | sed 's@/v[67]$@@' )/kubectl \
+    && SHA512=$( wget -qO- "$BIN_URL.sha512" ) \
+    && [ -n "$SHA512" ] \
+    && wget -qO- "$BIN_URL"  > /usr/local/bin/kubectl \
+    && chmod +x /usr/local/bin/kubectl \
+    && sha512sum /usr/local/bin/kubectl | grep "$SHA512"
 
 CMD [ "/usr/local/bin/kubectl" ]
