Enhancement: Add docker-entrypoint.sh
This allows one to run:
 - `docker run -it <image> --help` to run `kubectl --help`
 - `docker run -it <image> apply` to run `kubectl apply`
 - `docker run -it <image> kubectl apply` to run `kubectl apply`
-  `docker run -it <image> sh` to run `sh`

The downside is that it does add verbosity to the `Dockerfile`.

--- a/variants/v1.18.20-alpine-3.8/Dockerfile
+++ b/variants/v1.18.20-alpine-3.8/Dockerfile
@@ -3,6 +3,9 @@ ARG TARGETPLATFORM
 ARG BUILDPLATFORM
 RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM"
 
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+
 # When $TARGETPLATFORM is linux/arm/v7, strip out the '/v6' or '/v7' from it
 RUN BIN_URL=https://storage.googleapis.com/kubernetes-release/release/v1.18.20/bin/$( echo $TARGETPLATFORM | sed 's@/v[67]$@@' )/kubectl \
     && SHA512=$( wget -qO- "$BIN_URL.sha512" ) \
@@ -11,4 +14,4 @@ RUN BIN_URL=https://storage.googleapis.com/kubernetes-release/release/v1.18.20/b
     && chmod +x /usr/local/bin/kubectl \
     && sha512sum /usr/local/bin/kubectl | grep "$SHA512"
 
-CMD [ "/usr/local/bin/kubectl" ]
+ENTRYPOINT [ "/docker-entrypoint.sh" ]
