Enhancement: Improve validation of `kubectl` binary

--- a/variants/v1.24.9-envsubst-git-jq-kustomize-sops-ssh-alpine-3.8/Dockerfile
+++ b/variants/v1.24.9-envsubst-git-jq-kustomize-sops-ssh-alpine-3.8/Dockerfile
@@ -9,10 +9,10 @@ RUN chmod +x /docker-entrypoint.sh
 # When $TARGETPLATFORM is linux/arm/v7, strip out the '/v6' or '/v7' from it
 RUN BIN_URL=https://storage.googleapis.com/kubernetes-release/release/v1.24.9/bin/$( echo $TARGETPLATFORM | sed 's@/v[67]$@@' )/kubectl \
     && SHA512=$( wget -qO- "$BIN_URL.sha512" ) \
-    && [ -n "$SHA512" ] \
     && wget -qO- "$BIN_URL"  > /usr/local/bin/kubectl \
     && chmod +x /usr/local/bin/kubectl \
-    && sha512sum /usr/local/bin/kubectl | grep "$SHA512"
+    && sha512sum /usr/local/bin/kubectl | grep "^$SHA512 " \
+    && kubectl version --client
 
 # From: https://github.com/nginxinc/docker-nginx/blob/1.17.0/stable/alpine/Dockerfile
 # Bring in gettext so we can get `envsubst`, then throw
