--- a/variants/v1.20.15-envsubst-git-jq-kustomize-sops-ssh-alpine-3.8/Dockerfile
+++ b/variants/v1.20.15-envsubst-git-jq-kustomize-sops-ssh-alpine-3.8/Dockerfile
@@ -6,6 +6,8 @@ RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM"
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
+RUN apk add --no-cache ca-certificates
+
 # When $TARGETPLATFORM is linux/arm/v7, strip out the '/v6' or '/v7' from it
 RUN BIN_URL=https://storage.googleapis.com/kubernetes-release/release/v1.20.15/bin/$( echo $TARGETPLATFORM | sed 's@/v[67]$@@' )/kubectl \
     && SHA512=$( wget -qO- "$BIN_URL.sha512" ) \
