--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -47,7 +47,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -184,7 +184,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -320,7 +320,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -456,7 +456,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -592,7 +592,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -728,7 +728,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -864,7 +864,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -1000,7 +1000,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -1136,7 +1136,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -1272,7 +1272,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -1408,7 +1408,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -1544,7 +1544,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -1680,7 +1680,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -1816,7 +1816,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -1952,7 +1952,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -2088,7 +2088,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -2224,7 +2224,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -2360,7 +2360,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -2496,7 +2496,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -2632,7 +2632,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -2768,7 +2768,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -2904,7 +2904,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -3040,7 +3040,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -3176,7 +3176,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -3312,7 +3312,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
@@ -3448,7 +3448,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}
+          ${{ runner.os }}-buildx-${{ env.VARIANT_TAG }}-
           ${{ runner.os }}-buildx-
 
     - name: Prepare
