Refactor (ci): Use separate lines for `needs` key values to prevent merge conflicts

--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -3635,7 +3635,37 @@ jobs:
         mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
   update-draft-release:
-    needs: [build-v1-28-1-alpine-3-15, build-v1-28-1-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-27-5-alpine-3-15, build-v1-27-5-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-26-6-alpine-3-15, build-v1-26-6-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-25-11-alpine-3-15, build-v1-25-11-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-24-15-alpine-3-15, build-v1-24-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-23-17-alpine-3-15, build-v1-23-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-22-17-alpine-3-15, build-v1-22-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-21-14-alpine-3-15, build-v1-21-14-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-20-15-alpine-3-15, build-v1-20-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-19-16-alpine-3-15, build-v1-19-16-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-18-20-alpine-3-15, build-v1-18-20-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-17-17-alpine-3-15, build-v1-17-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-16-15-alpine-3-15, build-v1-16-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-15-12-alpine-3-15, build-v1-15-12-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-14-10-alpine-3-15, build-v1-14-10-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15]
+    needs:
+      - build-v1-28-1-alpine-3-15
+      - build-v1-28-1-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-27-5-alpine-3-15
+      - build-v1-27-5-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-26-6-alpine-3-15
+      - build-v1-26-6-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-25-11-alpine-3-15
+      - build-v1-25-11-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-24-15-alpine-3-15
+      - build-v1-24-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-23-17-alpine-3-15
+      - build-v1-23-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-22-17-alpine-3-15
+      - build-v1-22-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-21-14-alpine-3-15
+      - build-v1-21-14-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-20-15-alpine-3-15
+      - build-v1-20-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-19-16-alpine-3-15
+      - build-v1-19-16-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-18-20-alpine-3-15
+      - build-v1-18-20-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-17-17-alpine-3-15
+      - build-v1-17-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-16-15-alpine-3-15
+      - build-v1-16-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-15-12-alpine-3-15
+      - build-v1-15-12-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-14-10-alpine-3-15
+      - build-v1-14-10-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
@@ -3648,7 +3678,37 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-draft-release:
-    needs: [build-v1-28-1-alpine-3-15, build-v1-28-1-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-27-5-alpine-3-15, build-v1-27-5-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-26-6-alpine-3-15, build-v1-26-6-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-25-11-alpine-3-15, build-v1-25-11-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-24-15-alpine-3-15, build-v1-24-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-23-17-alpine-3-15, build-v1-23-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-22-17-alpine-3-15, build-v1-22-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-21-14-alpine-3-15, build-v1-21-14-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-20-15-alpine-3-15, build-v1-20-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-19-16-alpine-3-15, build-v1-19-16-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-18-20-alpine-3-15, build-v1-18-20-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-17-17-alpine-3-15, build-v1-17-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-16-15-alpine-3-15, build-v1-16-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-15-12-alpine-3-15, build-v1-15-12-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-14-10-alpine-3-15, build-v1-14-10-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15]
+    needs:
+      - build-v1-28-1-alpine-3-15
+      - build-v1-28-1-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-27-5-alpine-3-15
+      - build-v1-27-5-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-26-6-alpine-3-15
+      - build-v1-26-6-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-25-11-alpine-3-15
+      - build-v1-25-11-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-24-15-alpine-3-15
+      - build-v1-24-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-23-17-alpine-3-15
+      - build-v1-23-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-22-17-alpine-3-15
+      - build-v1-22-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-21-14-alpine-3-15
+      - build-v1-21-14-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-20-15-alpine-3-15
+      - build-v1-20-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-19-16-alpine-3-15
+      - build-v1-19-16-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-18-20-alpine-3-15
+      - build-v1-18-20-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-17-17-alpine-3-15
+      - build-v1-17-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-16-15-alpine-3-15
+      - build-v1-16-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-15-12-alpine-3-15
+      - build-v1-15-12-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-14-10-alpine-3-15
+      - build-v1-14-10-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
@@ -3663,7 +3723,37 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   update-dockerhub-description:
-    needs: [build-v1-28-1-alpine-3-15, build-v1-28-1-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-27-5-alpine-3-15, build-v1-27-5-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-26-6-alpine-3-15, build-v1-26-6-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-25-11-alpine-3-15, build-v1-25-11-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-24-15-alpine-3-15, build-v1-24-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-23-17-alpine-3-15, build-v1-23-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-22-17-alpine-3-15, build-v1-22-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-21-14-alpine-3-15, build-v1-21-14-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-20-15-alpine-3-15, build-v1-20-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-19-16-alpine-3-15, build-v1-19-16-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-18-20-alpine-3-15, build-v1-18-20-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-17-17-alpine-3-15, build-v1-17-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-16-15-alpine-3-15, build-v1-16-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-15-12-alpine-3-15, build-v1-15-12-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15, build-v1-14-10-alpine-3-15, build-v1-14-10-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15]
+    needs:
+      - build-v1-28-1-alpine-3-15
+      - build-v1-28-1-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-27-5-alpine-3-15
+      - build-v1-27-5-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-26-6-alpine-3-15
+      - build-v1-26-6-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-25-11-alpine-3-15
+      - build-v1-25-11-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-24-15-alpine-3-15
+      - build-v1-24-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-23-17-alpine-3-15
+      - build-v1-23-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-22-17-alpine-3-15
+      - build-v1-22-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-21-14-alpine-3-15
+      - build-v1-21-14-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-20-15-alpine-3-15
+      - build-v1-20-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-19-16-alpine-3-15
+      - build-v1-19-16-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-18-20-alpine-3-15
+      - build-v1-18-20-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-17-17-alpine-3-15
+      - build-v1-17-17-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-16-15-alpine-3-15
+      - build-v1-16-15-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-15-12-alpine-3-15
+      - build-v1-15-12-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
+      - build-v1-14-10-alpine-3-15
+      - build-v1-14-10-envsubst-git-jq-kustomize-sops-ssh-alpine-3-15
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
