--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,9 +2,9 @@ name: cron
 on:
   schedule:
     # Run daily
-    - cron: '0 * * * *'
+    - cron: '0 0 * * *'
 jobs:
-  update-versions-with-pr:
+  update-versions:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -17,8 +17,9 @@ jobs:
       uses: actions/checkout@v3
       with:
         token: ${{ secrets.WORKFLOW_TOKEN }}  # This configures the git repo to use this token
+        fetch-depth: 0  # Fetch all branches and tags
     - shell: pwsh
       run: |
-        ./Update-Versions.ps1 -PR
+        ./Update-Versions.ps1 -PR -AutoMergeQueue -AutoRelease
       env:
         GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
