Enhancement: Add `yq` in composite variants

--- a/variants/1.14.10-envsubst-git-jq-kustomize-sops-ssh-yq/Dockerfile
+++ b/variants/1.14.10-envsubst-git-jq-kustomize-sops-ssh-yq/Dockerfile
@@ -1,29 +1,18 @@
-@"
-FROM $( $VARIANT['_metadata']['distro'] ):$( $VARIANT['_metadata']['distro_version'] )
+FROM alpine:3.15
 ARG TARGETPLATFORM
 ARG BUILDPLATFORM
-RUN echo "I am running on `$BUILDPLATFORM, building for `$TARGETPLATFORM"
+RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM"
 
 RUN apk add --no-cache ca-certificates
 
-# When `$TARGETPLATFORM is linux/arm/v7, strip out the '/v6' or '/v7' from it
-RUN BIN_URL=https://storage.googleapis.com/kubernetes-release/release/v$( $VARIANT['_metadata']['package_version'] )/bin/`$( echo `$TARGETPLATFORM | sed 's@/v[67]$@@' )/kubectl \
-    && SHA512=`$( wget -qO- "`$BIN_URL.sha512" ) \
-    && wget -qO- "`$BIN_URL"  > /usr/local/bin/kubectl \
+# When $TARGETPLATFORM is linux/arm/v7, strip out the '/v6' or '/v7' from it
+RUN BIN_URL=https://storage.googleapis.com/kubernetes-release/release/v1.14.10/bin/$( echo $TARGETPLATFORM | sed 's@/v[67]$@@' )/kubectl \
+    && SHA512=$( wget -qO- "$BIN_URL.sha512" ) \
+    && wget -qO- "$BIN_URL"  > /usr/local/bin/kubectl \
     && chmod +x /usr/local/bin/kubectl \
-    && sha512sum /usr/local/bin/kubectl | grep "^`$SHA512 " \
+    && sha512sum /usr/local/bin/kubectl | grep "^$SHA512 " \
     && kubectl version --client
 
-
-"@
-
-$VARIANT['_metadata']['components'] | % {
-    $component = $_
-
-    switch( $component ) {
-
-        'envsubst' {
-            @'
 # From: https://github.com/nginxinc/docker-nginx/blob/1.17.0/stable/alpine/Dockerfile
 # Bring in gettext so we can get `envsubst`, then throw
 # the rest away. To do this, we need to install `gettext`
@@ -43,40 +32,15 @@ RUN apk add --no-cache --virtual .gettext gettext \
     && apk del .gettext \
     && mv /tmp/envsubst /usr/local/bin/
 
-
-'@
-        }
-
-        'git' {
-            @'
 RUN apk add --no-cache git
 
-
-'@
-        }
-
-        'jq' {
-            @'
 RUN apk add --no-cache jq
 
-
-'@
-        }
-
-        'kustomize' {
-            @"
 RUN apk add --no-cache curl \
     && curl -L https://github.com/kubernetes-sigs/kustomize/releases/download/v2.0.3/kustomize_2.0.3_linux_amd64 -o /usr/local/bin/kustomize \
     && chmod +x /usr/local/bin/kustomize \
     && apk del curl
 
-
-"@
-        }
-
-        'sops' {
-
-            @"
 RUN set -eux; \
     wget -qO- https://github.com/mozilla/sops/releases/download/v3.7.1/sops-v3.7.1.linux > /usr/local/bin/sops; \
     chmod +x /usr/local/bin/sops; \
@@ -85,36 +49,11 @@ RUN set -eux; \
 
 RUN apk add --no-cache gnupg
 
-
-"@
-        }
-
-        'ssh' {
-            @'
 RUN apk add --no-cache openssh-client
 
-
-'@
-        }
-
-        'yq' {
-            @'
 RUN apk add --no-cache jq
 
-
-'@
-        }
-
-        default {
-            throw "No such component: $component"
-        }
-    }
-}
-
-@"
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
 ENTRYPOINT [ "/docker-entrypoint.sh" ]
-
-"@
